--- a/index.html
+++ b/index.html
@@ -1,41 +1,28 @@
-<!-- index.html на rymtnrwtq.github.io -->
+<!-- /site/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="noindex, nofollow" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
   <title>Welcome | rymtnrwtq.github.io</title>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * { box-sizing: border-box; margin:0; padding:0 }
     body {
       font-family: sans-serif;
-      background: #121212;
-      color: #eee;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background:#121212; color:#eee;
+      height:100vh; display:flex;
+      align-items:center; justify-content:center;
     }
-    .selector {
-      text-align: center;
-    }
-    .selector h1 {
-      margin-bottom: 1rem;
-    }
+    .selector { text-align:center }
+    .selector h1 { margin-bottom:1rem }
     .selector button {
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      background: #1f1f1f;
-      border: 1px solid #444;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background 0.2s;
+      margin:.5rem; padding:.75rem 1.5rem;
+      font-size:1rem; background:#1f1f1f;
+      border:1px solid #444; border-radius:4px;
+      cursor:pointer; transition:background .2s;
     }
-    .selector button:hover {
-      background: #333;
-    }
+    .selector button:hover { background:#333 }
   </style>
 </head>
 <body>
@@ -48,6 +35,7 @@
   <script>
     const lang = localStorage.getItem('lang');
     if (lang) {
+      // редирект прямо в поддиректорию /site/
       window.location.replace(`/${lang}/`);
     }
     function choose(code) {
